
syntax = "proto3";
package chord;

service ChordService {
  rpc findSuccessor (FindSuccessorRequest) returns (FindSuccessorReply);
  rpc getNeighbours (GetNeighboursRequest) returns (GetNeighboursReply);
  rpc notify (NotifyRequest) returns (NotifyReply);
  rpc predecessorDeparture (PredDepartureRequest) returns (PredDepartureReply);
  rpc successorDeparture (SuccDepartureRequest) returns (SuccDepartureReply);

  rpc getKey (GetRequest) returns (GetReply);
  rpc storeValue (StoreRequest) returns (StoreReply);

  rpc checkHealth (HealthCheckRequest) returns (HealthCheckReply);

  rpc getStatus (GetStatusRequest) returns (GetStatusReply);
  rpc shutDown (ShutDownRequest) returns (ShutDownReply);
}

message FindSuccessorRequest {
  string key = 1;
}

message FindSuccessorReply {
  string addr = 1;
}

message GetNeighboursRequest {}

message GetNeighboursReply {
  optional string predecessor = 1;
  repeated string successors = 2;
}

message NotifyRequest {
  string addr = 1;
}

message NotifyReply {
  repeated string values = 1;
}

message PredDepartureRequest {
  optional string predecessor = 1;
  repeated string values = 2;
}

message PredDepartureReply {}

message SuccDepartureRequest {
  repeated string successors = 1;
}

message SuccDepartureReply {}

message GetRequest {
  string key = 1;
}

message GetReply {
  string value = 1;
}

message StoreRequest {
  string value = 1;
}

message StoreReply {
  string key = 1;
}


message GetStatusRequest {
}

message KeyValuePair {
  string key = 1;
  string value = 2;
}

message Finger {
  uint32 start_idx = 1;
  optional string addr = 2;
}

message GetStatusReply {
  repeated string successors = 1;
  optional string predecessor = 2;
  repeated KeyValuePair store = 3;
  repeated Finger fingers = 4;
}

message HealthCheckRequest {}
message HealthCheckReply {}

message ShutDownRequest {}
message ShutDownReply {}
