syntax = "proto3";
package peering;

service PeeringNode {
  rpc Introduce (IntroductionRequest) returns (IntroductionReply);
  rpc ListPeers (ListPeersRequest) returns (ListPeersReply);

  rpc getKey (GetKeyRequest) returns (GetKeyReply);
  rpc store (StoreRequest) returns (StoreReply);
  rpc transfer (TransferRequest) returns (TransferReply);

  rpc checkHealth (HealthCheckRequest) returns (HealthCheckReply);
  rpc getStatus (GetStatusRequest) returns (GetStatusReply);

  rpc shutDown (ShutDownRequest) returns (ShutDownReply);
}

message IntroductionRequest {
  string senderAdress = 1;
}

message IntroductionReply {
  repeated Peer knownPeers = 1;
}

message ListPeersRequest {}

message Peer {
  string addr = 1;
  string hash = 2;
}

message ListPeersReply {
  repeated Peer knownPeers = 1;
}

message HealthCheckRequest { }

message HealthCheckReply { }


message StoreRequest {
  string value = 1;
  bool asSecondary = 3;
}

message StoreReply {
  string key = 1;
  string storedIn = 2;
}

message GetKeyRequest {
  string key = 1;
}

message GetKeyReply {
  string value = 1;
}

message KeyValuePair {
  string key = 1;
  string value = 2;
}

message TransferRequest {
  repeated KeyValuePair toStore = 1;
}

message TransferReply {
  repeated string transferredKeys = 1;
}


message GetStatusRequest {
}


message Stewardship {
    string addr = 1;
    repeated string keys = 2;
}

message GetStatusReply {
  repeated KeyValuePair shard = 1;
  repeated KeyValuePair secondary_shard = 2;
  repeated Stewardship secondaryStewardships = 3;
}

message ShutDownRequest {}
message ShutDownReply {}

